extensions/multitenancy/err.txt
   Compiling ranvier-multitenancy v1.0.0-rc.1 (F:\project\ranvier\ranvier-workspace\ranvier\extensions\multitenancy)
error[E0599]: the method `ready` exists for struct `TenantRouterService<ServiceFn<ServiceFn<...>>>`, but its trait bounds were not satisfied
   --> extensions\multitenancy\src\layer.rs:136:32
    |
 34 | pub struct TenantRouterService<S> {
    | --------------------------------- method `ready` not found for this struct because it doesn't satisfy `_: Service<_>` or `_: ServiceExt<_>`
...
136 |         let response = service.ready().await.unwrap().call(request).await.unwrap();
    |                                ^^^^^ method cannot be called on `TenantRouterService<ServiceFn<ServiceFn<...>>>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `TenantRouterService<ServiceFn<ServiceFn<fn(http::Request<()>) -> impl futures_util::Future<Output = Result<Response<()>, Infallible>> {handle_request}>>>: tower::Service<_>`
            which is required by `TenantRouterService<ServiceFn<ServiceFn<fn(http::Request<()>) -> impl futures_util::Future<Output = Result<Response<()>, Infallible>> {handle_request}>>>: ServiceExt<_>`
note: the trait `tower::Service` must be implemented
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tower-service-0.3.3\src\lib.rs:311:1
    |
311 | pub trait Service<Request> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `ready`, perhaps you need to implement it:
            candidate #1: `ServiceExt`
    = note: the full name for the type has been written to 'F:\project\ranvier\ranvier-workspace\ranvier\target\debug\deps\ranvier_multitenancy-8e6fc96f5288d14a.long-type-2497988478691917782.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0282]: type annotations needed
   --> extensions\multitenancy\src\layer.rs:136:24
    |
136 |         let response = service.ready().await.unwrap().call(request).await.unwrap();
    |                        ^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> extensions\multitenancy\src\layer.rs:136:24
    |
136 |         let response = service.ready().await.unwrap().call(request).await.unwrap();
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0599]: the method `ready` exists for struct `TenantRouterService<ServiceFn<ServiceFn<...>>>`, but its trait bounds were not satisfied
   --> extensions\multitenancy\src\layer.rs:158:32
    |
 34 | pub struct TenantRouterService<S> {
    | --------------------------------- method `ready` not found for this struct because it doesn't satisfy `_: Service<_>` or `_: ServiceExt<_>`
...
158 |         let response = service.ready().await.unwrap().call(request).await.unwrap();
    |                                ^^^^^ method cannot be called on `TenantRouterService<ServiceFn<ServiceFn<...>>>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `TenantRouterService<ServiceFn<ServiceFn<fn(http::Request<()>) -> impl futures_util::Future<Output = Result<Response<()>, Infallible>> {handle_request}>>>: tower::Service<_>`
            which is required by `TenantRouterService<ServiceFn<ServiceFn<fn(http::Request<()>) -> impl futures_util::Future<Output = Result<Response<()>, Infallible>> {handle_request}>>>: ServiceExt<_>`
note: the trait `tower::Service` must be implemented
   --> C:\Users\realwolf\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tower-service-0.3.3\src\lib.rs:311:1
    |
311 | pub trait Service<Request> {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `ready`, perhaps you need to implement it:
            candidate #1: `ServiceExt`
    = note: the full name for the type has been written to 'F:\project\ranvier\ranvier-workspace\ranvier\target\debug\deps\ranvier_multitenancy-8e6fc96f5288d14a.long-type-2497988478691917782.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0282]: type annotations needed
   --> extensions\multitenancy\src\layer.rs:158:24
    |
158 |         let response = service.ready().await.unwrap().call(request).await.unwrap();
    |                        ^^^^^^^^^^^^^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> extensions\multitenancy\src\layer.rs:158:24
    |
158 |         let response = service.ready().await.unwrap().call(request).await.unwrap();
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `ranvier-multitenancy` (lib test) due to 6 previous errors
